spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_label_error.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Stage was already defined
  ┌─ testinput:5:10
  │
3 │         'a
  │          - Previously defined here
4 │     reg;
5 │         'a
  │          ^ 'a has already been defined


